# UrlPoller

./: CMakeLists.txt
headers/: socket.hpp  stream.hpp  task.hpp
src/: main.cpp  socket.cpp  stream.cpp  task.cpp
